--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,10 @@
-name: GitHub Actions Demo
+name: GitHub Actions
 on:
   pull_request:
     types: [opened]
+  push:
+  branches:
+    - $default-branch
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
