--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,10 +3,8 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - $default-branch
+      - ${{default-branch}}
   push:
-    branches:
-        - $default-branch
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
