--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - $default-branch
+      - master
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
