--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -4,6 +4,9 @@ on:
     types: [opened]
     branches:
       - master
+  push:
+    branches:
+      - master
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
