--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -3,10 +3,10 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - master
+      - ${{ github.event.repository.default_branch }}
   push:
     branches:
-      - master
+      - ${{ github.event.repository.default_branch }}
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
