--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -6,7 +6,7 @@ on:
       - ${{ github.event.repository.default_branch }}
   push:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - master
 jobs:
   I-Can-Change-This-To-Anything-I-Want:
     runs-on: ubuntu-latest
