--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - $default-branch
   push:
     branches:
       - master
