--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -14,4 +14,10 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - name: Checkout Repo
         uses: actions/checkout@master
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
