--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -8,48 +8,37 @@ on:
     branches:
       - master
 jobs:
-  frontend-cicd:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      # - name: Checkout Repo
-      #   uses: actions/checkout@master
-      # - name: Deploy to Firebase
-      #   uses: w9jds/firebase-action@master
-      #   with:
-      #     args: deploy --only hosting
-      #   env:
-      #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: yarn build-prod
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist
   deploy:
-    permissions:
-      contents: 'read'
-      id-token: 'write'
+    name: Deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Google Auth
-        id: auth
-        uses: 'google-github-actions/auth@v0'
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0
+          name: dist
+          path: dist
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
         with:
-          service: ${{ env.SERVICE }}
-          region: ${{ env.REGION }}
-          # NOTE: If required, update to the appropriate source folder
-          source: ./
-
-        # If required, use the Cloud Run url output in later steps
-      - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
-      - run: echo "This job's status is ${{ job.status }}."
-env:
-  PROJECT_ID: test-971a2
-  SERVICE: helloworld
-  REGION: asia-southeast1
-  GOOGLE_ENTRYPOINT: "web: ruby app.rb"
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
