--- a/.github/workflows/pr-create-workflow.yml
+++ b/.github/workflows/pr-create-workflow.yml
@@ -40,5 +40,5 @@ jobs:
         with:
           args: deploy --only hosting
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
